--- a/filmereview/pubspec.yaml
+++ b/filmereview/pubspec.yaml
@@ -37,6 +37,8 @@ flutter_icons:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/logo.jpeg
 
 scripts:
   mobx_build: flutter pub run build_runner build
