--- a/filmereview/pubspec.yaml
+++ b/filmereview/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_typeahead: ^3.1.3
   hive: ^2.0.4
   hive_flutter: ^1.1.0
+  http: ^0.13.4
 
 dev_dependencies:
   build_runner: ^2.1.4
