--- a/filmereview/Kotlin/untitled/pom.xml
+++ b/filmereview/Kotlin/untitled/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.25.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-compiler</artifactId>
+            <version>1.5.10</version>
+        </dependency>
     </dependencies>
 
 </project>
