--- a/filmereview/pubspec.yaml
+++ b/filmereview/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   http: ^0.13.4
+  flutter_rating_bar: ^4.0.0
 
 dev_dependencies:
   build_runner: ^2.1.4
